# selfLearning

./: .gitignore  CMakeLists.txt  main.cpp  selfLearning.sln  selfLearning.vcxproj
libs/Debug/: wjutils.lib
src/: CMakeLists.txt  main.cpp
